scribble-assertions/src/test/resources/bad/extensions/assrtcore/syntax/parsing/todo/AssrtCoreTest03c.scr
module good.extensions.assrtcore.syntax.parsing.AssrtCoreTest03c;


type <java> "java.lang.Integer" from "rt.jar" as int;


//*
global protocol Proto1(role A, role B)
{
	1(x: int) from A to B;  @"!0 > 1"  // Testing negation precedence
}
//*/
